packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-implicit.js
import { FancyError } from './_shared.js';

export const POST = () => {
	throw new FancyError('oops');
};
